tests/parsing/smtlib/poly/errors/153_function_def_unopened_arg_list_1.expected
File "tests/parsing/smtlib/poly/errors/153_function_def_unopened_arg_list_1.psmt2", line 2, character 20-21:
2 | (define-fun-rec foo _)
                        ^
Error while parsing a function definition, read the reserved word '_',
      but expected an opening parenthesis to start the list of arguments.
